--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ middle_name:
 last_name: Kumar
 email: dhruv.kumar@iiitd.ac.in
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  Dhruv Kumar, Computer Scientist and Professor at IIIT Delhi
+  Dhruv Kumar, Computer Scientist and Professor at IIIT
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
